output/HilcoPencilGrammarParser.java
// Generated from /Users/timothyhilgenberg/go/src/github.com/timhilco/go-PencilCalculator/HilcoPencilGrammarParser.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class HilcoPencilGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ASSIGNMENT=1, CASE=2, END_CASE=3, IS=4, SWITCH=5, END_SWITCH=6, IF=7, 
		THEN=8, ELSE=9, DOUBLE_COLON=10, SEMI_COLON=11, NOT=12, EXPONENTIAL=13, 
		MULTIPLY=14, DIVIDE=15, ADD=16, MINUS=17, GREATER_THAN=18, GREATER_THAN_EQUAL=19, 
		LESS_THAN=20, LESS_THAN_EQUAL=21, EQUAL=22, NOT_EQUAL=23, AND=24, OR=25, 
		COLON=26, LBRACKET=27, RBRACKET=28, CURLYLBRACKET=29, CURLYRBRACKET=30, 
		LPAREN=31, RPAREN=32, UNDERSCORE=33, PERCENT_SIGN=34, AT_SIGN=35, COMMA=36, 
		DOT=37, KEYWORD_TRUE=38, KEYWORD_FALSE=39, KEYWORD_NIL=40, CLASSNAME=41, 
		ID=42, ATFUNCTION=43, INT=44, STRING=45, FLOAT=46, PERCENT=47, DATE=48, 
		NEWLINE=49, WS=50;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_expression = 2, RULE_caseStatement = 3, 
		RULE_caseList = 4, RULE_caseItem = 5, RULE_ifStatement = 6, RULE_name = 7, 
		RULE_worksheetVariable = 8, RULE_atFunction = 9, RULE_argList = 10, RULE_dataAccessor = 11, 
		RULE_accessorList = 12, RULE_accessorObjectOrArray = 13, RULE_accessorObject = 14, 
		RULE_accessorArray = 15, RULE_specialKeyword = 16;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "expression", "caseStatement", "caseList", "caseItem", 
			"ifStatement", "name", "worksheetVariable", "atFunction", "argList", 
			"dataAccessor", "accessorList", "accessorObjectOrArray", "accessorObject", 
			"accessorArray", "specialKeyword"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "':='", "'case'", "'endcase'", "'is'", "'switch'", "'endswitch'", 
			"'if'", "'then'", "'else'", "'::'", "';'", "'NOT'", "'^'", "'*'", "'/'", 
			"'+'", "'-'", "'>'", "'>='", "'<'", "'<='", "'='", "'~='", "'AND'", "'OR'", 
			"':'", "'['", "']'", "'{'", "'}'", "'('", "')'", "'_'", "'%'", "'@'", 
			"','", "'.'", "'true'", "'false'", "'nil'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ASSIGNMENT", "CASE", "END_CASE", "IS", "SWITCH", "END_SWITCH", 
			"IF", "THEN", "ELSE", "DOUBLE_COLON", "SEMI_COLON", "NOT", "EXPONENTIAL", 
			"MULTIPLY", "DIVIDE", "ADD", "MINUS", "GREATER_THAN", "GREATER_THAN_EQUAL", 
			"LESS_THAN", "LESS_THAN_EQUAL", "EQUAL", "NOT_EQUAL", "AND", "OR", "COLON", 
			"LBRACKET", "RBRACKET", "CURLYLBRACKET", "CURLYRBRACKET", "LPAREN", "RPAREN", 
			"UNDERSCORE", "PERCENT_SIGN", "AT_SIGN", "COMMA", "DOT", "KEYWORD_TRUE", 
			"KEYWORD_FALSE", "KEYWORD_NIL", "CLASSNAME", "ID", "ATFUNCTION", "INT", 
			"STRING", "FLOAT", "PERCENT", "DATE", "NEWLINE", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "HilcoPencilGrammarParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HilcoPencilGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilGrammarParserListener ) ((HilcoPencilGrammarParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilGrammarParserListener ) ((HilcoPencilGrammarParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HilcoPencilGrammarParserVisitor ) return ((HilcoPencilGrammarParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			setState(42);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(34);
				expression(0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(38);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CASE) | (1L << IF) | (1L << NOT) | (1L << MINUS) | (1L << LPAREN) | (1L << KEYWORD_TRUE) | (1L << KEYWORD_FALSE) | (1L << KEYWORD_NIL) | (1L << CLASSNAME) | (1L << ID) | (1L << ATFUNCTION) | (1L << INT) | (1L << STRING) | (1L << FLOAT) | (1L << PERCENT) | (1L << DATE))) != 0)) {
					{
					{
					setState(35);
					statement();
					}
					}
					setState(40);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode ASSIGNMENT() { return getToken(HilcoPencilGrammarParser.ASSIGNMENT, 0); }
		public TerminalNode SEMI_COLON() { return getToken(HilcoPencilGrammarParser.SEMI_COLON, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilGrammarParserListener ) ((HilcoPencilGrammarParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilGrammarParserListener ) ((HilcoPencilGrammarParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HilcoPencilGrammarParserVisitor ) return ((HilcoPencilGrammarParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			expression(0);
			setState(45);
			match(ASSIGNMENT);
			setState(46);
			expression(0);
			setState(47);
			match(SEMI_COLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	 
		public ExpressionContext() { }
		public void copyFrom(ExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NameCalculatorContext extends ExpressionContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public NameCalculatorContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilGrammarParserListener ) ((HilcoPencilGrammarParserListener)listener).enterNameCalculator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilGrammarParserListener ) ((HilcoPencilGrammarParserListener)listener).exitNameCalculator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HilcoPencilGrammarParserVisitor ) return ((HilcoPencilGrammarParserVisitor<? extends T>)visitor).visitNameCalculator(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class UnaryNotCalculatorContext extends ExpressionContext {
		public TerminalNode NOT() { return getToken(HilcoPencilGrammarParser.NOT, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public UnaryNotCalculatorContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilGrammarParserListener ) ((HilcoPencilGrammarParserListener)listener).enterUnaryNotCalculator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilGrammarParserListener ) ((HilcoPencilGrammarParserListener)listener).exitUnaryNotCalculator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HilcoPencilGrammarParserVisitor ) return ((HilcoPencilGrammarParserVisitor<? extends T>)visitor).visitUnaryNotCalculator(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PercentContext extends ExpressionContext {
		public TerminalNode PERCENT() { return getToken(HilcoPencilGrammarParser.PERCENT, 0); }
		public PercentContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilGrammarParserListener ) ((HilcoPencilGrammarParserListener)listener).enterPercent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilGrammarParserListener ) ((HilcoPencilGrammarParserListener)listener).exitPercent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HilcoPencilGrammarParserVisitor ) return ((HilcoPencilGrammarParserVisitor<? extends T>)visitor).visitPercent(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ParensContext extends ExpressionContext {
		public TerminalNode LPAREN() { return getToken(HilcoPencilGrammarParser.LPAREN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(HilcoPencilGrammarParser.RPAREN, 0); }
		public ParensContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilGrammarParserListener ) ((HilcoPencilGrammarParserListener)listener).enterParens(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilGrammarParserListener ) ((HilcoPencilGrammarParserListener)listener).exitParens(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HilcoPencilGrammarParserVisitor ) return ((HilcoPencilGrammarParserVisitor<? extends T>)visitor).visitParens(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BinaryRelationalCalculatorContext extends ExpressionContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode GREATER_THAN() { return getToken(HilcoPencilGrammarParser.GREATER_THAN, 0); }
		public TerminalNode GREATER_THAN_EQUAL() { return getToken(HilcoPencilGrammarParser.GREATER_THAN_EQUAL, 0); }
		public TerminalNode LESS_THAN() { return getToken(HilcoPencilGrammarParser.LESS_THAN, 0); }
		public TerminalNode LESS_THAN_EQUAL() { return getToken(HilcoPencilGrammarParser.LESS_THAN_EQUAL, 0); }
		public TerminalNode EQUAL() { return getToken(HilcoPencilGrammarParser.EQUAL, 0); }
		public TerminalNode NOT_EQUAL() { return getToken(HilcoPencilGrammarParser.NOT_EQUAL, 0); }
		public BinaryRelationalCalculatorContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilGrammarParserListener ) ((HilcoPencilGrammarParserListener)listener).enterBinaryRelationalCalculator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilGrammarParserListener ) ((HilcoPencilGrammarParserListener)listener).exitBinaryRelationalCalculator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HilcoPencilGrammarParserVisitor ) return ((HilcoPencilGrammarParserVisitor<? extends T>)visitor).visitBinaryRelationalCalculator(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class WorkSheetVariableCalculatorContext extends ExpressionContext {
		public WorksheetVariableContext worksheetVariable() {
			return getRuleContext(WorksheetVariableContext.class,0);
		}
		public WorkSheetVariableCalculatorContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilGrammarParserListener ) ((HilcoPencilGrammarParserListener)listener).enterWorkSheetVariableCalculator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilGrammarParserListener ) ((HilcoPencilGrammarParserListener)listener).exitWorkSheetVariableCalculator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HilcoPencilGrammarParserVisitor ) return ((HilcoPencilGrammarParserVisitor<? extends T>)visitor).visitWorkSheetVariableCalculator(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StringContext extends ExpressionContext {
		public TerminalNode STRING() { return getToken(HilcoPencilGrammarParser.STRING, 0); }
		public StringContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilGrammarParserListener ) ((HilcoPencilGrammarParserListener)listener).enterString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilGrammarParserListener ) ((HilcoPencilGrammarParserListener)listener).exitString(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HilcoPencilGrammarParserVisitor ) return ((HilcoPencilGrammarParserVisitor<? extends T>)visitor).visitString(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ExpressionAtFunctionContext extends ExpressionContext {
		public AtFunctionContext atFunction() {
			return getRuleContext(AtFunctionContext.class,0);
		}
		public ExpressionAtFunctionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilGrammarParserListener ) ((HilcoPencilGrammarParserListener)listener).enterExpressionAtFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilGrammarParserListener ) ((HilcoPencilGrammarParserListener)listener).exitExpressionAtFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HilcoPencilGrammarParserVisitor ) return ((HilcoPencilGrammarParserVisitor<? extends T>)visitor).visitExpressionAtFunction(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DateContext extends ExpressionContext {
		public TerminalNode DATE() { return getToken(HilcoPencilGrammarParser.DATE, 0); }
		public DateContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilGrammarParserListener ) ((HilcoPencilGrammarParserListener)listener).enterDate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilGrammarParserListener ) ((HilcoPencilGrammarParserListener)listener).exitDate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HilcoPencilGrammarParserVisitor ) return ((HilcoPencilGrammarParserVisitor<? extends T>)visitor).visitDate(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CaseContext extends ExpressionContext {
		public CaseStatementContext caseStatement() {
			return getRuleContext(CaseStatementContext.class,0);
		}
		public CaseContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilGrammarParserListener ) ((HilcoPencilGrammarParserListener)listener).enterCase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilGrammarParserListener ) ((HilcoPencilGrammarParserListener)listener).exitCase(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HilcoPencilGrammarParserVisitor ) return ((HilcoPencilGrammarParserVisitor<? extends T>)visitor).visitCase(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IntegerContext extends ExpressionContext {
		public TerminalNode INT() { return getToken(HilcoPencilGrammarParser.INT, 0); }
		public IntegerContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilGrammarParserListener ) ((HilcoPencilGrammarParserListener)listener).enterInteger(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilGrammarParserListener ) ((HilcoPencilGrammarParserListener)listener).exitInteger(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HilcoPencilGrammarParserVisitor ) return ((HilcoPencilGrammarParserVisitor<? extends T>)visitor).visitInteger(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BinaryArithmeticCalculatorContext extends ExpressionContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode MULTIPLY() { return getToken(HilcoPencilGrammarParser.MULTIPLY, 0); }
		public TerminalNode DIVIDE() { return getToken(HilcoPencilGrammarParser.DIVIDE, 0); }
		public TerminalNode ADD() { return getToken(HilcoPencilGrammarParser.ADD, 0); }
		public TerminalNode MINUS() { return getToken(HilcoPencilGrammarParser.MINUS, 0); }
		public BinaryArithmeticCalculatorContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilGrammarParserListener ) ((HilcoPencilGrammarParserListener)listener).enterBinaryArithmeticCalculator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilGrammarParserListener ) ((HilcoPencilGrammarParserListener)listener).exitBinaryArithmeticCalculator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HilcoPencilGrammarParserVisitor ) return ((HilcoPencilGrammarParserVisitor<? extends T>)visitor).visitBinaryArithmeticCalculator(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BinaryLogicalCalculatorContext extends ExpressionContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode AND() { return getToken(HilcoPencilGrammarParser.AND, 0); }
		public TerminalNode OR() { return getToken(HilcoPencilGrammarParser.OR, 0); }
		public BinaryLogicalCalculatorContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilGrammarParserListener ) ((HilcoPencilGrammarParserListener)listener).enterBinaryLogicalCalculator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilGrammarParserListener ) ((HilcoPencilGrammarParserListener)listener).exitBinaryLogicalCalculator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HilcoPencilGrammarParserVisitor ) return ((HilcoPencilGrammarParserVisitor<? extends T>)visitor).visitBinaryLogicalCalculator(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ExpressionKeywordContext extends ExpressionContext {
		public SpecialKeywordContext specialKeyword() {
			return getRuleContext(SpecialKeywordContext.class,0);
		}
		public ExpressionKeywordContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilGrammarParserListener ) ((HilcoPencilGrammarParserListener)listener).enterExpressionKeyword(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilGrammarParserListener ) ((HilcoPencilGrammarParserListener)listener).exitExpressionKeyword(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HilcoPencilGrammarParserVisitor ) return ((HilcoPencilGrammarParserVisitor<? extends T>)visitor).visitExpressionKeyword(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FloatContext extends ExpressionContext {
		public TerminalNode FLOAT() { return getToken(HilcoPencilGrammarParser.FLOAT, 0); }
		public FloatContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilGrammarParserListener ) ((HilcoPencilGrammarParserListener)listener).enterFloat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilGrammarParserListener ) ((HilcoPencilGrammarParserListener)listener).exitFloat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HilcoPencilGrammarParserVisitor ) return ((HilcoPencilGrammarParserVisitor<? extends T>)visitor).visitFloat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class UnaryMinusCalculatorContext extends ExpressionContext {
		public TerminalNode MINUS() { return getToken(HilcoPencilGrammarParser.MINUS, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public UnaryMinusCalculatorContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilGrammarParserListener ) ((HilcoPencilGrammarParserListener)listener).enterUnaryMinusCalculator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilGrammarParserListener ) ((HilcoPencilGrammarParserListener)listener).exitUnaryMinusCalculator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HilcoPencilGrammarParserVisitor ) return ((HilcoPencilGrammarParserVisitor<? extends T>)visitor).visitUnaryMinusCalculator(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BinaryExponentialCalculatorContext extends ExpressionContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode EXPONENTIAL() { return getToken(HilcoPencilGrammarParser.EXPONENTIAL, 0); }
		public BinaryExponentialCalculatorContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
